--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
+
+    ext {
+        kotlin_version = '1.3.71'
+        ktx_version = '1.2.0'
+        constraint_version = '1.1.3'
+        material_version = '1.1.0'
+        appcompat_version = '1.1.0'
+        core_version = '1.3.5'
+        lifecycle_version = '2.2.0'
+        retrofit_version = '2.8.1'
+        room_version = '2.2.5'
+        moshi_version = '1.9.2'
+        koin_version = '2.1.5'
+        nav_version = '2.3.0-alpha05'
+        moshi_converter_version = '2.8.1'
+
+    }
     repositories {
         google()
         jcenter()
