--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,9 @@ buildscript {
         koin_version = '2.1.5'
         nav_version = '2.3.0-alpha05'
         moshi_converter_version = '2.8.1'
-
     }
+
+
     repositories {
         google()
         jcenter()
@@ -26,6 +27,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
